feat: api resources (#20)
