# src/Entity/Customer.php
@@ -2,8 +2,9 @@
 
 namespace App\Entity;
 
-use App\Repository\CustomerRepository;
 use Doctrine\ORM\Mapping as ORM;
+use App\Repository\CustomerRepository;
+use Symfony\Component\Serializer\Annotation\Groups;
 
 #[ORM\Entity(repositoryClass: CustomerRepository::class)]
 class Customer
@@ -14,15 +15,18 @@ class Customer
     private ?int $id = null;
 
     #[ORM\Column(length: 255)]
+    #[Groups(["getCustomer", "getClient"])]
     private ?string $firstName = null;
 
     #[ORM\Column(length: 255)]
+    #[Groups(["getCustomer", "getClient"])]
     private ?string $lastName = null;
 
     #[ORM\Column(length: 255)]
+    #[Groups(["getCustomer", "getClient"])]
     private ?string $email = null;
 
-    #[ORM\ManyToOne(inversedBy: 'Customer')]
+    #[ORM\ManyToOne(inversedBy: 'customers')]
     #[ORM\JoinColumn(nullable: true)]
     private ?Client $client = null;
 
